main/default/objects/Georesults_business__c/fields/LNP_GeoLSPtype__c.field-meta.xml
<CustomField>
    <fullName>LNP_GeoLSPtype__c</fullName>
    <description>The Telephone Industry Type associated with the GeoName Local Service Provider (LSP). The GeoLSP Type indicates the type or category of Telecommunications Service Provider associated with the Operating Company Number (OCN) and Operating Company Name (OCN Name). The list of OCN Types or Categories was established following the 1984 divestiture of the Bell System to help classify Telecommunications Service Providers.</description>
    <label>Provisioning GeoLSP Type</label>
    <type>TextArea</type>
</CustomField>