main/default/objects/Georesults_business__c/fields/LNP_LRNswLATA__c.field-meta.xml
<CustomField>
    <fullName>LNP_LRNswLATA__c</fullName>
    <description>The Local Access Transport Area (LATA) where the Local Routing Number Switch Building is located</description>
    <label>LRN Switch LATA</label>
    <type>TextArea</type>
</CustomField>