main/default/objects/Georesults_business__c/fields/LNP_LRNswState__c.field-meta.xml
<CustomField>
    <fullName>LNP_LRNswState__c</fullName>
    <description>The State where the Local Routing Number Switch Building is located</description>
    <label>LRN Switch State</label>
    <type>TextArea</type>
</CustomField>