main/default/objects/Georesults_business__c/fields/LNP_MSAcode__c.field-meta.xml
<CustomField>
    <fullName>LNP_MSAcode__c</fullName>
    <description>4-digit code associated with the MSA where this Telephone Number Switch Building is located.</description>
    <label>LNP MSA Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>