main/default/objects/Georesults_business__c/fields/LNP_OCN__c.field-meta.xml
<CustomField>
    <fullName>LNP_OCN__c</fullName>
    <description>The Operating Company Name (OCN Name) is the full Legal Name of the Local Service Provider (LSP) that is associated with the Operating Company Number (OCN) code that owns or controls the NPA-NXX or End Office Switch of the 10 digit Local Routing Number (LRN) as stated in the National Exchange Carriers Association (NECA) databases. Due to various merger and acquisition activities, business name changes and other reasons, the OCN Names do not necessarily correlate to the current official and/or legal name of the Local Telephone Service Provider Company associated with the Operating Company Number (OCN).</description>
    <label>OCN Name</label>
    <type>TextArea</type>
</CustomField>