main/default/objects/Georesults_business__c/fields/LNP_OCNcode__c.field-meta.xml
<CustomField>
    <fullName>LNP_OCNcode__c</fullName>
    <description>The Operating Company Number (OCN) is an alphanumeric code that is used to identify the Legal Name of the Local Service Provider (LSP) that owns or controls the NPA-NXX or End Office Switch that is associated with the 10 digit Local Routing Number (LRN). OCN codes are assigned and maintained by the National Exchange Carriers Association (NECA).</description>
    <label>OCN Code</label>
    <type>TextArea</type>
</CustomField>