main/default/objects/Georesults_business__c/fields/LNP_OverallOCN__c.field-meta.xml
<CustomField>
    <fullName>LNP_OverallOCN__c</fullName>
    <description>The Overall Operating Company Name (Overall OCN Name) is the full Legal Name of the Local Telephone Service Provider (LSP) that is associated with the Overall Operating Company Number (OCN) code as stated in the National Exchange Carriers Association (NECA) databases. Not all individual OCN Company Codes have Overall OCN Company Codes, so there will be cases where the Overall OCN Name field is not populated.</description>
    <label>Overall OCN Name</label>
    <type>TextArea</type>
</CustomField>