main/default/objects/Georesults_business__c/fields/LNP_PortStatIndCode__c.field-meta.xml
<CustomField>
    <fullName>LNP_PortStatIndCode__c</fullName>
    <description>The GeoResults assigned code to indicate the current Portability Status of the 10 digit telephone number. A code of &quot;0&quot; indicates that this 10 digit telephone number is not currently ported. A code of &quot;1&quot; indicates that this individual 10 digit telephone number is currently ported.</description>
    <inlineHelpText>A code of &quot;0&quot; indicates that this 10 digit telephone number is not currently ported. A code of &quot;1&quot; indicates that this individual 10 digit telephone number is currently ported.</inlineHelpText>
    <label>Portability Status Indicator Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>