main/default/objects/Georesults_business__c/fields/LNP_ServingLEC__c.field-meta.xml
<CustomField>
    <fullName>LNP_ServingLEC__c</fullName>
    <description>Marketplace name of the telecommunications service provider (LEC - Local Exchange Carrier) associated with the Telephone Number Switch Building.</description>
    <inlineHelpText>Marketplace name of the telecommunications service provider (LEC - Local Exchange Carrier) associated with the Telephone Number Switch Building.</inlineHelpText>
    <label>LNP Serving LEC</label>
    <type>TextArea</type>
</CustomField>