main/default/objects/Georesults_business__c/fields/LNP_TNswBldg__c.field-meta.xml
<CustomField>
    <fullName>LNP_TNswBldg__c</fullName>
    <description>The 8 character Central Office Building CLLI Code (Common Language Location Identifier) that identifies the building where the 10 digit Telephone Number Switch is located.</description>
    <label>Telephone Number Switch Building</label>
    <type>TextArea</type>
</CustomField>