main/default/objects/Georesults_business__c/fields/LNP_TNswCity__c.field-meta.xml
<CustomField>
    <fullName>LNP_TNswCity__c</fullName>
    <description>The City where the Telephone Number Switch Building is located.</description>
    <label>Telephone Number Switch City</label>
    <type>TextArea</type>
</CustomField>