main/default/objects/Georesults_business__c/fields/LNP_TNswState__c.field-meta.xml
<CustomField>
    <fullName>LNP_TNswState__c</fullName>
    <description>The State where the Telephone Number Switch Building is located.</description>
    <label>Telephone Number Switch State</label>
    <type>TextArea</type>
</CustomField>