main/default/objects/Georesults_business__c/fields/LocalTelSpend__c.field-meta.xml
<CustomField>
    <fullName>LocalTelSpend__c</fullName>
    <description>Estimated telecommunications expenditures of this business for all local voice wireline services including POTS, local taxes, enhanced features, CLASS services but excluding wireless services. This estimate is based on a GeoResults proprietary model and is expressed in $(000) per year.</description>
    <label>Local TelSpend Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>