main/default/objects/Georesults_business__c/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <description>Metropolitan statistical area (MSA) where this business is located. MSAs are geographic areas defined by the U.S. Office of Management and Budget (OMB) for use by Federal statistical agencies in collecting, tabulating, and publishing Federal statistics. A MSA contains a core urban area of 50,000 or more population. Each MSA consists of one or more counties and includes the counties containing the core urban area, as well as any adjacent counties that have a high degree of social and economic integration with the urban core as measured by commuting ties. The MSA is determined by locating this business address, using latitude and longitude, on a US MSA map. If this business is not within an MSA, the field contains &quot;Non-MSA Area&quot;.</description>
    <inlineHelpText>Metropolitan statistical area (MSA) where this business is located.</inlineHelpText>
    <label>MSA</label>
    <type>TextArea</type>
</CustomField>