main/default/objects/Georesults_business__c/fields/MSACode__c.field-meta.xml
<CustomField>
    <fullName>MSACode__c</fullName>
    <description>4-digit code associated with the MSA where this business is located.</description>
    <inlineHelpText>4-digit code associated with the MSA where this business is located.</inlineHelpText>
    <label>MSA Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>