main/default/objects/Georesults_business__c/fields/MSO1__c.field-meta.xml
<CustomField>
    <fullName>MSO1__c</fullName>
    <description>Name of the primary cable Multiple System Operator (MSO) providing telecommunication services in this geographic area based on the GeoResults Cable MSO Boundary Maps.  NOTE: This field will show &quot;Undetermined&quot; to indicate that a cable service provider has not yet been identified for this geographic area.</description>
    <label>Incumbent Cable MSO1</label>
    <type>TextArea</type>
</CustomField>