main/default/objects/Georesults_business__c/fields/NAICS2__c.field-meta.xml
<CustomField>
    <fullName>NAICS2__c</fullName>
    <description>2-digit code used to classify the primary business activity of this business at this location. The North American Industry Classification System (NAICS) is the standard used by Federal statistical agencies as well as State and local agencies, trade associations, private businesses, and other organizations for the purpose of collecting, analyzing, and publishing statistical data related to the U.S. business economy.</description>
    <inlineHelpText>2-digit code used to classify the primary business activity of this business at this location.</inlineHelpText>
    <label>NAICS2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>