main/default/objects/Georesults_business__c/fields/NAICS2Desc__c.field-meta.xml
<CustomField>
    <fullName>NAICS2Desc__c</fullName>
    <description>NAICS standard description of the NAICS2.</description>
    <inlineHelpText>NAICS standard description of the NAICS2.</inlineHelpText>
    <label>NAICS2 Description</label>
    <type>TextArea</type>
</CustomField>