main/default/objects/Georesults_business__c/fields/NAICS4_Description__c.field-meta.xml
<CustomField>
    <fullName>NAICS4_Description__c</fullName>
    <description>NAICS standard description of the NAICS4.</description>
    <inlineHelpText>NAICS standard description of the NAICS4.</inlineHelpText>
    <label>NAICS4 Description</label>
    <type>TextArea</type>
</CustomField>