main/default/objects/Georesults_business__c/fields/NAICS6desc__c.field-meta.xml
<CustomField>
    <fullName>NAICS6desc__c</fullName>
    <description>NAICS standard description of the NAICS6.</description>
    <inlineHelpText>NAICS standard description of the NAICS6.</inlineHelpText>
    <label>NAICS6 Description</label>
    <type>TextArea</type>
</CustomField>