main/default/objects/Georesults_business__c/fields/NPANXXLECType__c.field-meta.xml
<CustomField>
    <fullName>NPANXXLECType__c</fullName>
    <description>Telecommunications industry category of the NPANXX LEC which generally divides companies based on their business activities - Wireless, Incumbent Local Exchange Carrier or Competitive Local Exchange Carrier.</description>
    <inlineHelpText>Telecommunications industry category of the NPANXX LEC which generally divides companies based on their business activities</inlineHelpText>
    <label>NPANXXLEC Type</label>
    <type>TextArea</type>
</CustomField>