main/default/objects/Georesults_business__c/fields/OCX__c.field-meta.xml
<CustomField>
    <fullName>OCX__c</fullName>
    <description>Estimate of the number of OC3s or equivalents and higher speed services used in this business to carry all traffic based on GeoResults proprietary predictive models. A OC3 or equivalent is defined as a 155 megabits per second circuit carrying traffic through the telephone network.</description>
    <label>OCX</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>