main/default/objects/Georesults_business__c/fields/OCXScore__c.field-meta.xml
<CustomField>
    <fullName>OCXScore__c</fullName>
    <description>GeoResults modeled ranking score (0-100) indicating a business&#39;s likelihood of being able to use OCX technology considering cost, availability and features. A high score indicates that this business is very likely OCX user and a low score indicates a very small likelihood that OCX will be useful for this business.</description>
    <label>OCX Score</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>