main/default/objects/Georesults_business__c/fields/Open_Lead_Exists__c.field-meta.xml
<CustomField>
    <fullName>Open_Lead_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger checks box when leads not unqualled or converted exist associated to GR Biz.</description>
    <label>Open Lead Exists</label>
    <type>Checkbox</type>
</CustomField>