main/default/objects/Georesults_business__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Primary telephone number for this business. Phone uses the standard North American Numbering Plan format of first 3 digits as the area code followed by a 3-digit Central Office (exchange) code and a 4-digit subscriber number. Phone contains no parentheses, spaces or hyphens and is left blank if the telephone number is not known.</description>
    <inlineHelpText>First 3 digits as the area code followed by a 3-digit Central Office (exchange) code and a 4-digit subscriber number. Contains no parentheses, spaces or hyphens and is left blank if unknown.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>