main/default/objects/Georesults_business__c/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <description>Post-directional portion of Clean Address. This field can be used to more precisely select businesses based on the parts of their address. For instance select businesses where Street Name = Main and Post = SW could focus selection into a facility route.</description>
    <inlineHelpText>Post-directional portion of Clean Address.</inlineHelpText>
    <label>Post</label>
    <type>TextArea</type>
</CustomField>