main/default/objects/Georesults_business__c/fields/RateCenterCode__c.field-meta.xml
<CustomField>
    <fullName>RateCenterCode__c</fullName>
    <description>Abbreviated version of the Rate Center Name where this business is located.</description>
    <inlineHelpText>Abbreviated version of the Rate Center Name where this business is located.</inlineHelpText>
    <label>Rate Center Code</label>
    <type>TextArea</type>
</CustomField>