main/default/objects/Georesults_business__c/fields/Ref__c.field-meta.xml
<CustomField>
    <fullName>Ref__c</fullName>
    <description>Number assigned by GeoResults to indicate rank order and to provide linkage among reports. Reference is customized for each project.</description>
    <inlineHelpText>Number assigned by GeoResults to indicate rank order and to provide linkage among reports. Reference is customized for each project.</inlineHelpText>
    <label>Ref</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>