main/default/objects/Georesults_business__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Location</label>
    <referenceTo>Service_Location__c</referenceTo>
    <relationshipLabel>Georesults Businesses</relationshipLabel>
    <relationshipName>Georesults_Businesses</relationshipName>
    <type>Lookup</type>
</CustomField>