main/default/objects/Georesults_business__c/fields/ServingCO__c.field-meta.xml
<CustomField>
    <fullName>ServingCO__c</fullName>
    <description>Enhanced version of the 8 character CLLI™ of the incumbent local telephone switch equipment building which serves this business. Generally the Serving Central Office is the same as the Boundary Central Office. However, if this business address is weak or incomplete, the Boundary Central Office and NPANXX Central Office are evaluated to determine the most likely Serving Central Office.</description>
    <label>Serving Central Office</label>
    <type>TextArea</type>
</CustomField>