main/default/objects/Georesults_business__c/fields/ServingOCN__c.field-meta.xml
<CustomField>
    <fullName>ServingOCN__c</fullName>
    <description>Unique 4 character OCN (Operating Company Number) assigned by NECA (National Exchange Carrier Association) to the Serving LEC. All telecommunications service providers that operate their own switching network are assigned an OCN.</description>
    <label>Serving OCN</label>
    <type>TextArea</type>
</CustomField>