main/default/objects/Georesults_business__c/fields/SIC2nd__c.field-meta.xml
<CustomField>
    <fullName>SIC2nd__c</fullName>
    <description>8-digit code used to classify the secondary economic activity of this business at this location whereas SIC8 indicates the primary economic activity for this business. The Standard Industrial Classification (SIC) code was created by the US government for the purpose of collecting, analyzing, and publishing statistical data related to the US. business economy. The SIC system was replaced by the North American Industry Classification System (NAICS) in 1997, but the SIC system is still in use, most notably by the Securities and Exchange Commission.</description>
    <inlineHelpText>8-digit code used to classify the secondary economic activity of this business at this location whereas SIC8 indicates the primary economic activity for this business.</inlineHelpText>
    <label>Second SIC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>