main/default/objects/Georesults_business__c/fields/SIC4__c.field-meta.xml
<CustomField>
    <fullName>SIC4__c</fullName>
    <description>4-digit code used to classify the primary economic activity of this business at this location. The Standard Industrial Classification (SIC) code was created by the US government for the purpose of collecting, analyzing, and publishing statistical data related to the US. business economy. The SIC system was replaced by the North American Industry Classification System (NAICS) in 1997, but the SIC system is still in use, most notably by the Securities and Exchange Commission.</description>
    <inlineHelpText>4-digit code used to classify the primary economic activity of this business at this location.</inlineHelpText>
    <label>SIC4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>