main/default/objects/Georesults_business__c/fields/SIC6desc__c.field-meta.xml
<CustomField>
    <fullName>SIC6desc__c</fullName>
    <description>SIC standard description of the SIC6.</description>
    <inlineHelpText>SIC standard description of the SIC6.</inlineHelpText>
    <label>SIC6 Description</label>
    <type>TextArea</type>
</CustomField>