main/default/objects/Georesults_business__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Code indicating source or supplier of the record</description>
    <inlineHelpText>Code indicating source or supplier of the record</inlineHelpText>
    <label>Source</label>
    <type>TextArea</type>
</CustomField>