main/default/objects/Georesults_business__c/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <description>Unique identification number for this business assigned by the business database provider.</description>
    <inlineHelpText>Unique identification number for this business assigned by the business database provider.</inlineHelpText>
    <label>SourceId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>