main/default/objects/Georesults_business__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Standard 2-letter US Postal Service abbreviation for the state where this business is located.</description>
    <inlineHelpText>Standard 2-letter US Postal Service abbreviation for the state where this business is located.</inlineHelpText>
    <label>State</label>
    <type>TextArea</type>
</CustomField>