main/default/objects/Georesults_business__c/fields/StreetName__c.field-meta.xml
<CustomField>
    <fullName>StreetName__c</fullName>
    <description>Street name portion of Clean Address. This field can be used to more precisely select businesses based on the parts of their address. For instance select businesses on Main could focus selection for a facility route.</description>
    <inlineHelpText>Street name portion of Clean Address.</inlineHelpText>
    <label>Street Name</label>
    <type>TextArea</type>
</CustomField>