main/default/objects/Georesults_business__c/fields/SubscriberID__c.field-meta.xml
<CustomField>
    <fullName>SubscriberID__c</fullName>
    <description>Integra Subscriber ID where record matched to a Integra-provided Customer list record or a Integra-provided Phones list record.</description>
    <label>Subscriber ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>