main/default/objects/Georesults_business__c/fields/TollTelSpend__c.field-meta.xml
<CustomField>
    <fullName>TollTelSpend__c</fullName>
    <description>Sum of the estimated telecommunications expenditures of this business for all long distance calling (toll) services but excluding wireless services. Toll TelSpend is the sum of InterLATA TelSpend and IntraLATA TelSpend. This estimate is based on a GeoResults proprietary model and is expressed in $(000) per year.</description>
    <label>Toll TelSpend Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>