main/default/objects/Georesults_business__c/fields/Total_DS0s__c.field-meta.xml
<CustomField>
    <fullName>Total_DS0s__c</fullName>
    <description>Sum of the Voice DS0s and Data DS0s.</description>
    <label>Total DS0s</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>