main/default/objects/Georesults_business__c/fields/TotalComSpend__c.field-meta.xml
<CustomField>
    <fullName>TotalComSpend__c</fullName>
    <description>Sum of the estimated telecommunications expenditures of this business for all wireline and wireless communication services including voice, data and transport services. Total ComSpend is the sum of Total TelSpend and Total Cell TelSpend. This estimate is based on a GeoResults proprietary model and is expressed in $(000) per year.</description>
    <label>Total ComSpend Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>