main/default/objects/Georesults_business__c/fields/TotalTelSpendCategory__c.field-meta.xml
<CustomField>
    <fullName>TotalTelSpendCategory__c</fullName>
    <description>Integra Calculated Tel Spend Bands</description>
    <label>Total Tel Spend Category Per Year</label>
    <type>TextArea</type>
</CustomField>