main/default/objects/Georesults_business__c/fields/TotalTelSpendPerMonth__c.field-meta.xml
<CustomField>
    <fullName>TotalTelSpendPerMonth__c</fullName>
    <description>Integra Calculated based upon Total Tel Spend per Month (TotalTelSpend * 1000 / 12)</description>
    <inlineHelpText>Estimated monthly spend on voice and data at this single location.</inlineHelpText>
    <label>TotalTelSpendPerMonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>