main/default/objects/Georesults_business__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Unit portion of Address. This field can be used to more precisely select businesses within a building.</description>
    <inlineHelpText>Unit portion of Address. This field can be used to more precisely select businesses within a building.</inlineHelpText>
    <label>Unit</label>
    <type>TextArea</type>
</CustomField>