main/default/objects/Georesults_business__c/fields/Unqualled_Lead_Exists__c.field-meta.xml
<CustomField>
    <fullName>Unqualled_Lead_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger checks box when associated lead is unqualified.</description>
    <label>Unqualled Lead Exists</label>
    <type>Checkbox</type>
</CustomField>