main/default/objects/Georesults_business__c/fields/Voice_DS0s__c.field-meta.xml
<CustomField>
    <fullName>Voice_DS0s__c</fullName>
    <description>Estimated number of the Switched Voice Lines used in this business to carry all voice traffic (except 800 services) and FAX services based on the GeoResults proprietary predictive models. A Voice DS0 or equivalent is defined as a 64 kilobit circuit carrying traffic through the public switched telephone network.</description>
    <label>Voice DS0s</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>