main/default/objects/Georesults_business__c/fields/VoiceBW__c.field-meta.xml
<CustomField>
    <fullName>VoiceBW__c</fullName>
    <label>Voice Bandwidth</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>