main/default/objects/Georesults_business__c/fields/VoiceBWhi__c.field-meta.xml
<CustomField>
    <fullName>VoiceBWhi__c</fullName>
    <description>Estimate of the voice bandwidth used in this business to carry all voice traffic based on GeoResults proprietary predictive models if this business is proactive in their purchases of voice services. The estimate is expressed in megabits per second.</description>
    <label>Voice Bandwidth High</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>