main/default/objects/Georesults_business__c/fields/VoiceCellTelSpend__c.field-meta.xml
<CustomField>
    <fullName>VoiceCellTelSpend__c</fullName>
    <description>Estimated telecommunications expenditures of this business for all voice wireless services including local taxes, enhanced features, CLASS services but excluding wireline services. This estimate is based on a GeoResults proprietary model and is expressed in $(000) per year.</description>
    <label>Voice Cell TelSpend Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>