main/default/objects/Georesults_business__c/fields/VoiceTelSpend__c.field-meta.xml
<CustomField>
    <fullName>VoiceTelSpend__c</fullName>
    <description>Sum of the estimated telecommunications expenditures of this business for all wireline voice services excluding wireless services. Voice TelSpend is the sum of Local TelSpend and Toll TelSpend. This estimate is based on a GeoResults proprietary model and is expressed in $(000) per year.</description>
    <label>Voice TelSpend Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>