main/default/objects/Georesults_business__c/fields/WirelessHiSpeedIntFlag__c.field-meta.xml
<CustomField>
    <fullName>WirelessHiSpeedIntFlag__c</fullName>
    <description>Flag indicating that this business is a likely user of wireless data service. 1 indicates this business has a high probability of being able to use wireless data technology considering cost, availability and features. 0 indicates that this business is more likely to use other technologies.</description>
    <label>Wireless HiSpeedInt Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>