main/default/objects/Georesults_business__c/fields/Zip4__c.field-meta.xml
<CustomField>
    <fullName>Zip4__c</fullName>
    <description>Standard US Postal Service 4-digit code that follows the Zip assigned to this business location for the purpose of expediting and automating mail delivery.</description>
    <inlineHelpText>Standard US Postal Service 4-digit code that follows the Zip assigned to this business location for the purpose of expediting and automating mail delivery.</inlineHelpText>
    <label>Zip4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>