main/default/objects/Georesults_business__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>Standard US Postal Service 5-digit code assigned to this business location for the purpose of expediting and automating mail delivery.</description>
    <inlineHelpText>Standard US Postal Service 5-digit code assigned to this business location for the purpose of expediting and automating mail delivery.</inlineHelpText>
    <label>Zip</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>